[package]
name = "todolist-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
env_logger = "0.10.0"
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.104"
